se cambio el index y el responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
     </header>
     <main>
 <section class="contactos">
-            <a class="volver" href="./Binerka.html">VOLVER</a>
+            <a class="volver" href="../index.html">VOLVER</a>
             <h1 class="info-contacto">¿Tenés un diseño personalizado para hacer? Ponete en contacto conmigo, en 
                 Instagram o por WhatsApp, apretando la palabra de abajo.</h1>
                     <article class="redes">
