--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -22,7 +22,7 @@
                 <img class="imagen" src="../assets/bin 4.jpg" alt="">
             </section>
         </header>
-    <a class="volver" href="./Binerka.html">VOLVER</a>
+    <a class="volver" href="../index.html">VOLVER</a>
     <main class="alineado">
         <h1 class="info">INFORMACION</h1>
         <ul class="uñas">
