--- a/pages/mistrabajos.html
+++ b/pages/mistrabajos.html
@@ -20,7 +20,7 @@
         </section>
     </nav>
     <div>
-        <a class="volver" href="./Binerka.html">VOLVER</a>
+        <a class="volver" href="../index.html">VOLVER</a>
     </div>
     <header class="flex-container">
     <img class="semi" src="../assets/Imagen de WhatsApp 2023-01-22 a las 19.18.05.jpg" alt=""  >
