--- a/pages/precios.html
+++ b/pages/precios.html
@@ -22,7 +22,7 @@
         </section>
     </header>
 <main>
-    <li><a class="volver" href="../pages/Binerka.html">VOLVER</a></li>
+    <li><a class="volver" href="../index.html">VOLVER</a></li>
     <section class="prices">
         <li>Capping</li>
         <li>Esmaltado semi permanente</li>
