--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<link rel="stylesheet" href="./css/estilos.css">
+    <title>Binerka Nails</title>
 </head>
-<body>
-    
-</body>
+<body class="colorFondo">
+    <header class="header">
+        <nav>
+            <ul class="navbar" >
+                <a class="contactob" href="./pages/contacto.html">CONTACTO</a>
+                <a class="contactob" href="./pages/turnos.html">TURNOS</a>
+                <a class="contactob" href="./pages/precios.html">PRECIOS</a>
+                <a class="contactob" href="./pages/informacion.html">INFORMACION</a>
+            </ul>
+            <section class="section">
+                <img class="main" src="./assets/bin 4.jpg"  alt="" width="260">
+            </section>
+        </nav>
+    </header>
+    <main class="list">
+        <ul class="margin">
+        <li class="trabalho"><a class="trabajos" href="./pages/mistrabajos.html">MIS TRABAJOS</a></li>
+        </ul>
+        <img class="img" src="./assets/Imagen de WhatsApp 2023-01-11 a las 22.17.56.jpg" alt="" width="270">
+        <section class="grid">
+            <ul class="derecha">
+            <li><a class="contactoa" href="./pages/contacto.html">CONTACTO</a></li>
+            <li><a class="informaciona" href="./pages/informacion.html">INFORMACION</a></li>
+            <li><a class="preciosa" href="./pages/precios.html">PRECIOS</a></li>
+        </ul>
+        </section>
+    </main>
+    <footer class="footer">
+<p>Todos los derechos reservados. Prohibida su reproducción total o parcial sin el permiso de su propietario ©</p>
+    </footer>
+</body> 
 </html>
+
