--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -21,7 +21,7 @@
             <img class="imagen" src="../assets/bin 4.jpg" alt="">
         </section>
     </header>
-    <a class="volver" href="./Binerka.html">VOLVER</a>
+    <a class="volver" href="../index.html">VOLVER</a>
     <main>
 
     </main>
