se agregaron los responsive

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="
+    Binerka Nails es un emprendimiento de cuidado y belleza de uñas.
+    Ofreciendo el mejor servicio para las clientas con variedad de esmaltes y diseños">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./css/estilos.css">
+    <meta name="keywords" content="nails, semipermanente, uñas, manicura, diseño de uñas, ushuaia">
+    <meta name="author" content= "franco margarido">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Binerka Nails</title>
+<link rel="shortcut icon" href="./assets/bin 4.jpg" type="image/x-icon">
 </head>
 <body class="colorFondo">
     <header class="header">
         <nav>
             <ul class="navbar" >
                 <a class="contactob" href="./pages/contacto.html">CONTACTO</a>
-                <a class="contactob" href="./pages/turnos.html">TURNOS</a>
+                <a class="contactob" href="./pages/mistrabajos.html"> TRABAJOS</a>
                 <a class="contactob" href="./pages/precios.html">PRECIOS</a>
                 <a class="contactob" href="./pages/informacion.html">INFORMACION</a>
             </ul>
@@ -23,14 +29,14 @@
     </header>
     <main class="list">
         <ul class="margin">
-        <li class="trabalho"><a class="trabajos" href="./pages/mistrabajos.html">MIS TRABAJOS</a></li>
+        <li class="trabalho"><a class="trabajos" href="./pages/mistrabajos.html">TRABAJOS</a></li>
         </ul>
-        <img class="img" src="./assets/Imagen de WhatsApp 2023-01-11 a las 22.17.56.jpg" alt="" width="270">
+            <img class="img" src="./assets/Imagen de WhatsApp 2023-01-11 a las 22.17.56.jpg" alt="" width="270">
         <section class="grid">
             <ul class="derecha">
             <li><a class="contactoa" href="./pages/contacto.html">CONTACTO</a></li>
-            <li><a class="informaciona" href="./pages/informacion.html">INFORMACION</a></li>
-            <li><a class="preciosa" href="./pages/precios.html">PRECIOS</a></li>
+            <li><a class="contactoa" href="./pages/informacion.html">INFORMACION</a></li>
+            <li><a class="contactoa" href="./pages/precios.html">PRECIOS</a></li>
         </ul>
         </section>
     </main>
