--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="description" content="
+    Binerka Nails es un emprendimiento de cuidado y belleza de uñas.
+    Ofreciendo el mejor servicio para las clientas con variedad de esmaltes y diseños">
+    <meta name="keywords" content="instagram de manicura, contacto de manicura, nails, diseño de uñas">
     <title>Binerka Nails</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../assets/bin 4.jpg" type="image/x-icon">
 </head>
         <body class="colorFondo">
             <nav>
                 <ul class="navbar" >
                     <a class="contactob" href="./contacto.html">CONTACTO</a>
-                    <a class="contactob" href="./turnos.html">TURNOS</a>
+                    <a class="contactob" href="./mistrabajos.html"> TRABAJOS</a>
                     <a class="contactob" href="./precios.html">PRECIOS</a>
                     <a class="contactob" href="./informacion.html">INFORMACION</a>
                 </ul>
             </nav>
     <header class="header-contacto">
-        <img class="imagen" src="../assets/bin 4.jpg" alt="">
+        <img class="main" src="../assets/bin 4.jpg" alt="">
     </header>
     <main>
 <section class="contactos">
             <a class="volver" href="../index.html">VOLVER</a>
-            <h1 class="info-contacto">¿Tenés un diseño personalizado para hacer? Ponete en contacto conmigo, en 
-                Instagram o por WhatsApp, apretando la palabra de abajo.</h1>
-                    <article class="redes">
-            <a class="insta" href="https://www.instagram.com/binerka_nails/?next=%2F"><li>Instagram</li></a>
-            <a class="wpp" href="https://api.whatsapp.com/send/?phone=542901469812&text&type=phone_number&app_absent=0">WhatsApp</a>
-                    </article>
+            <h1 class="info-contacto">¿Tenés un diseño personalizado? Ponete en contacto conmigo <br> por 
+                Instagram o por WhatsApp, apretando el icono de abajo.</h1>
+                <section class="buttons">
+                    <a href="https://api.whatsapp.com/send/?phone=542901469812&text&type=phone_number&app_absent=0" class="fa fa-whatsapp"></a>
+                    <a href="https://www.instagram.com/binerka_nails/" class="fa fa-instagram"></a>
                 </section>
             </main>
             <footer class="footer">
