--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -5,39 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="
+    Binerka Nails es un emprendimiento de cuidado y belleza de uñas.
+    Ofreciendo el mejor servicio para las clientas con variedad de esmaltes y diseños">
+    <meta name="keywords" content="informacion de uñas, cuidado de manicura, cuidado de uñas,">
+    <meta name="author" content= "franco margarido">
     <title>Binerka Nails</title>
+    <link rel="shortcut icon" href="../assets/bin 4.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="colorFondo">
-    <nav>
-        <ul class="navbar" >
-            <a class="contactob" href="./contacto.html">CONTACTO</a>
-            <a class="contactob" href="./turnos.html">TURNOS</a>
-            <a class="contactob" href="./precios.html">PRECIOS</a>
-            <a class="contactob" href="./informacion.html">INFORMACION</a>
-        </ul>
-    </nav>
+            <nav>
+                <ul class="navbar" >
+                    <a class="contactob" href="./contacto.html">CONTACTO</a>
+                    <a class="contactob" href="./mistrabajos.html">TRABAJOS</a>
+                    <a class="contactob" href="./precios.html">PRECIOS</a>
+                    <a class="contactob" href="./informacion.html">INFORMACION</a>
+                </ul>
+            </nav>
         <header class="header-informacion">
-            <section>
-                <img class="imagen" src="../assets/bin 4.jpg" alt="">
-            </section>
+            <img class="imagen" src="../assets/bin 4.jpg" alt="">
         </header>
     <a class="volver" href="../index.html">VOLVER</a>
     <main class="alineado">
         <h1 class="info">INFORMACION</h1>
         <ul class="uñas">
-        <li>Capping: Se aplica una capa fina de acrilico en la uña natural
+        <li> <b>Capping:</b> Se aplica una capa fina de acrilico en la uña natural
         brindandole un crecimiento fortalecido</li>
-        <li>Esculpidas: se extiende el largo de la uña natural aplicando acrilico</li>
-        <li>Esmalte Semipermanente: le da color y brillo a la uña natural
+        <li> <b>Esculpidas:</b> se extiende el largo de la uña natural aplicando acrilico</li>
+        <li> <b>Esmalte Semipermanente:</b>  le da color y brillo a la uña natural
         con una duración de 15-21 días</li>
         </ul>
     </main>
     <footer>
         <h2 class="info1">CUIDADOS</h2>
         <ul class="cuidado">
-        <li>Todo servicio va a tener una duracion de 15 - 21 días  dependiendo de los cuidados. 
-            Al momento de usar productos de limpieza desengrasantes como detergente, se recomienda usar guantes y así evitar el desprendimiento del servicio realizado. 
+        <li>Todo servicio va a tener una duracion de 15 - 21 días  dependiendo de los cuidados. <br>
+            Al momento de usar productos de limpieza desengrasantes como detergente, se recomienda usar guantes y así evitar el desprendimiento del servicio realizado. <br>
             En caso de que esto suceda reservar un turno para el retiramiento del servicio, de lo contrario puede filtrarse agua entre la uña y el esmaltado o acrigel y generar un hongo.</li>
         </ul>
         <p class="footer">Todos los derechos reservados. Prohibida su reproducción total o parcial sin el permiso de su propietario ©</p>
