--- a/pages/mistrabajos.html
+++ b/pages/mistrabajos.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="
+    Binerka Nails es un emprendimiento de cuidado y belleza de uñas.
+    Ofreciendo el mejor servicio para las clientas con variedad de esmaltes y diseños">
+    <meta name="keywords" content="capping, semipermanente, esculpidas, diseño de uñas, nails">
+    <meta name="author" content= "franco margarido">
     <title>Binerka Nails</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../assets/bin 4.jpg" type="image/x-icon">
 </head>
 <body class="colorFondo">
+    <header>
     <nav>
         <ul class="navbar" >
             <a class="contactob" href="./contacto.html">CONTACTO</a>
-            <a class="contactob" href="./turnos.html">TURNOS</a>
+            <a class="contactob" href="./mistrabajos.html">TRABAJOS</a>
             <a class="contactob" href="./precios.html">PRECIOS</a>
             <a class="contactob" href="./informacion.html">INFORMACION</a>
         </ul>
@@ -19,14 +26,20 @@
             <img class="main" src="../assets/bin 4.jpg"  alt="" width="260">
         </section>
     </nav>
+</header>
     <div>
         <a class="volver" href="../index.html">VOLVER</a>
     </div>
-    <header class="flex-container">
-    <img class="semi" src="../assets/Imagen de WhatsApp 2023-01-22 a las 19.18.05.jpg" alt=""  >
-    <img class="capping" src="../assets/Imagen de WhatsApp 2023-01-25 a las 01.26.23.jpg" alt="">
-    <img class="esculpidas" src="../assets/Imagen de WhatsApp 2023-01-11 a las 22.17.56.jpg" alt="">
-</header>
+
+    <section class="content-card">
+            <img class="semi" src="../assets/Imagen de WhatsApp 2023-01-22 a las 19.18.05.jpg" alt=""  >
+            <img class="capping" src="../assets/Imagen de WhatsApp 2023-01-25 a las 01.26.23.jpg" alt="">
+            <img class="esculpidas" src="../assets/Imagen de WhatsApp 2023-01-11 a las 22.17.56.jpg" alt="">
+            <img class="capping" src="../assets/uñas 2.jpg" alt="">
+            <img class="semi" src="../assets/uñas halloween.jpg" alt="">
+            <img class="esculpidas" src="../assets/uñas.jpg" alt="">
+</section>
+
 <footer class="footer">
     <p>Todos los derechos reservados. Prohibida su reproducción total o parcial sin el permiso de su propietario ©</p>
         </footer>
