--- a/pages/precios.html
+++ b/pages/precios.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="
+    Binerka Nails es un emprendimiento de cuidado y belleza de uñas.
+    Ofreciendo el mejor servicio para las clientas con variedad de esmaltes y diseños">
+    <meta name="keywords" content="precios de uñas, manicura barata, semipermanente, capping, esculpidas, nails, uñas">
+    <meta name="author" content= "franco margarido">
     <title>Binerka Nails</title>
+    <link rel="shortcut icon" href="../assets/bin 4.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="colorFondo">
     <header>
             <nav>
                 <ul class="navbar" >
-                    <a href="./contacto.html">CONTACTO</a>
-                    <a href="./turnos.html">TURNOS</a>
-                    <a href="./precios.html">PRECIOS</a>
-                    <a href="./informacion.html">INFORMACION</a>
+                    <a class="contactob" href="./contacto.html">CONTACTO</a>
+                    <a class="contactob" href="./mistrabajos.html">TRABAJOS</a>
+                    <a  class="contactob"href="./precios.html">PRECIOS</a>
+                    <a  class="contactob"href="./informacion.html">INFORMACION</a>
                 </ul>
             </nav>
         <section class="header-informacion">
