se finalizo el proyecto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,8 +31,9 @@
     <main>
         <a class="volver" href="../index.html">VOLVER</a>
 <section class="contactos">
-            <h1 class="info-contacto">¿Tenés un diseño personalizado? Ponete en contacto conmigo <br> por 
-                Instagram o por WhatsApp, apretando el icono de abajo.</h1>
+                <h1>¿Tenes un diseño personalizado para hacer?</h1>
+                <h2>Ponete en contacto conmigo, en Instagram
+                    o WhatsApp, apretando la palabra de abajo </h2>
                 <section class="buttons">
                     <a href="https://api.whatsapp.com/send/?phone=542901469812&text&type=phone_number&app_absent=0" class="fa fa-whatsapp"></a>
                     <a href="https://www.instagram.com/binerka_nails/" class="fa fa-instagram"></a>
