se entrega el proyecto final

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <header class="header">
         <nav>
             <ul class="navbar" >
-                <a class="contactob" href="./pages/contacto.html">CONTACTO</a>
-                <a class="contactob" href="./pages/mistrabajos.html"> TRABAJOS</a>
-                <a class="contactob" href="./pages/precios.html">PRECIOS</a>
-                <a class="contactob" href="./pages/informacion.html">INFORMACION</a>
-            </ul>
+                <li><a class="contactoi" href="./pages/contacto.html">CONTACTO</a></li>
+                <li><a class="contactob" href="./pages/mistrabajos.html"> TRABAJOS</a></li>
+                <li><a class="contactob" href="./pages/precios.html">PRECIOS</a></li>
+                <li><a class="contactob" href="./pages/informacion.html">INFORMACION</a></li>
+                </ul>
             <div class="color">
                 <img class="main" src="./assets/bin 4.jpg"  alt="" width="260">
             </div>
