--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -18,7 +18,7 @@
     <header>
             <nav>
                 <ul class="navbar" >
-                    <a class="contactob" href="./contacto.html">CONTACTO</a>
+                    <a class="contactoi" href="./contacto.html">CONTACTO</a>
                     <a class="contactob" href="./mistrabajos.html">TRABAJOS</a>
                     <a class="contactob" href="./precios.html">PRECIOS</a>
                     <a class="contactob" href="./informacion.html">INFORMACION</a>
