--- a/index.html
+++ b/index.html
@@ -3,32 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/styles.css">
-
-            <!--=============== BOXICONS ===============-->
-            <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
     <title>Binerka Nails</title>
 </head>
 <body>
+    <header class="header">
+        <nav>
+            <div class="background">
 
-<header>
-    <a href="https://www.instagram.com/binerka_nails/" class="nav__logo">
-        <i class='bx bxs-star' ></i>Binerka
-    </a>
-    
+            </div>
+            <div class="home__img">
+                <svg class="home__blob" viewBox="0 0 479 467"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <mask id="mask0" mask-type="alpha">
+                        <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
+                    </mask>
+                    <g mask="url(#full0)">
+                        <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
+                        <image class="home__blob-img" x="50" y="60" href=""/>
+                    </g>
+                </svg>
+                <img src="./assets/pngwing.com.png" class="nails" alt="">
+            </div>
+        </nav>
+<section class="section">
+    <div class="responsive">
+    <h1 class="binerka__title">
+        Binerka Nails
+    </h1>
+    <p>Para agendar tu turno en el horario que decidas hace click <br> en el boton de abajo</p>
+<button class="button binerka__button">
+    <a href="https://api.whatsapp.com/send/?phone=542901469812&text&type=phone_number&app_absent=0">Reservar</a>
+</button>
+<a href="https://www.instagram.com/binerka_nails/" class="button button--gray button--small">
+    Instagram
+</a>
+<a href="https://www.facebook.com/binerkanails" class="button button--gray-gap button--small">
+    Facebook
+</a>
+
+
+
+
+
+
+
+</div>
+</section>
 </header>
+<footer class="footer">
 
-    <main>
-        <div class="home__center">
-            <button class="button home__button">
-                <a href="https://api.whatsapp.com/send/?phone=542901469812&text&type=phone_number&app_absent=0">Reserva tu turno <br> tocando aca</a>
-            </button>
-        </div>
-    </main>
-
-
-
-    <script src="./main.js"></script>
+</footer>
 </body>
 </html>
